RESOLVED FIXED15550
WebKit does not support CSS3 column-span:
https://bugs.webkit.org/show_bug.cgi?id=15550
Summary WebKit does not support CSS3 column-span:
Eric Seidel (no email)
Reported 2007-10-18 00:00:37 PDT
WebKit does not support CSS3 column-span: The new multi-column support is pretty nice, but it's missing a useful "column-span" property. See attached test case for a demonstration of column-span: all;
Attachments
test case (1.49 KB, text/html)
2007-10-18 00:00 PDT, Eric Seidel (no email)
no flags
Patch (543.03 KB, patch)
2010-05-28 12:27 PDT, Dave Hyatt
no flags
Fix style issues (543.18 KB, patch)
2010-05-28 14:22 PDT, Dave Hyatt
bdakin: review+
Eric Seidel (no email)
Comment 1 2007-10-18 00:00:55 PDT
Created attachment 16713 [details] test case
Dan Villiom Podlaski Christiansen
Comment 2 2008-01-07 03:15:27 PST
For the record, I've begun a small, private endeavour to try to see if I can get this working. If I hit any major stumbling blocks, I'll post here. However, if anyone begins implementing this; please say so :-)
Dave Hyatt
Comment 3 2010-05-28 12:27:58 PDT
WebKit Review Bot
Comment 4 2010-05-28 12:29:28 PDT
Attachment 57362 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 WebCore/rendering/RenderBlock.cpp:326: An else statement can be removed when the prior "if" concludes with a return, break, continue or goto statement. [readability/control_flow] [4] WebCore/rendering/RenderBlock.cpp:331: An else if statement should be written as an if statement when the prior "if" concludes with a return, break, continue or goto statement. [readability/control_flow] [4] WebCore/rendering/RenderBlock.cpp:390: Boolean expressions that span multiple lines should have their operators on the left side of the line instead of the right side. [whitespace/operators] [4] Total errors found: 3 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dave Hyatt
Comment 5 2010-05-28 14:22:06 PDT
Created attachment 57376 [details] Fix style issues
Beth Dakin
Comment 6 2010-05-28 14:50:33 PDT
Comment on attachment 57376 [details] Fix style issues r=me!
Dave Hyatt
Comment 7 2010-06-01 11:59:04 PDT
Fixed in r60494.
Note You need to log in before you can comment on or make changes to this bug.